--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -9,7 +9,7 @@
   border: none;
 }
 html[data-theme="dark"] {
-  --wrapper-background-color: rgb(33, 33, 33);
+  --wrapper-background-color: #181818;
   --inner-background-color: #fff;
   --inner__container-background-color: #fff;
   --main-text-color: #fff;
