--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -10,14 +10,14 @@
   padding: 0 40px;
   .inner {
     height: 100%;
-    max-width: 1200px;
+    max-width: 1650px;
     width: 100%;
-    padding: 30px 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     &__container {
       width: 100%;
+			height: 100%;
       text-align: center;
     }
   }
