--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -17,8 +17,10 @@
     justify-content: center;
     &__container {
       width: 100%;
-			height: 100%;
-      text-align: center;
+      height: 100%;
+      display: flex;
+      align-items: center;
+			justify-content: center;
     }
   }
 }
