--- a/client/src/components/Chat/Body/ChatBody.module.scss
+++ b/client/src/components/Chat/Body/ChatBody.module.scss
@@ -46,3 +46,26 @@
     background-color: #8774e1;
   }
 }
+.message__inputContainer {
+  background-color: #2b2b2b;
+  width: 100%;
+  height: 55px;
+  padding: 5px 20px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.message__send {
+  background-color: #8774e1;
+  border-radius: 22px;
+  height: 40px;
+  width: 80px;
+  cursor: pointer;
+  color: #fff;
+  transition: 0.1s;
+}
+.message__send:hover {
+  background-color: #7963dd;
+}
