css refactor theme

--- a/client/src/assets/styles/App.scss
+++ b/client/src/assets/styles/App.scss
@@ -1,9 +1,7 @@
-@import "./_variables.scss";
-
 .wrapper {
   width: 100%;
   height: 100vh;
-  background-color: $wrapper-background-color;
+  background-color: var(--primary-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,7 +18,7 @@
       height: 100%;
       display: flex;
       align-items: center;
-			justify-content: center;
+      justify-content: center;
     }
   }
 }
