--- a/client/src/assets/styles/Login.scss
+++ b/client/src/assets/styles/Login.scss
@@ -1,5 +1,3 @@
-@import "./variables";
-
 .login {
   display: flex;
   align-items: center;
@@ -8,7 +6,7 @@
   margin: 0 auto;
   position: relative;
   &__title {
-    color: $main-text-color;
+    color: var(--primary-text-color);
     margin-bottom: 30px;
   }
   &__form {
@@ -16,21 +14,6 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-  }
-  &__input {
-    color: $main-text-color;
-    background-color: transparent;
-    border: 1px solid $border-color;
-    border-radius: 15px;
-    font-size: 1rem;
-    max-width: 360px;
-    width: 100%;
-    height: 55px;
-    padding: 0px 20px;
-    margin-bottom: 20px;
-  }
-  &__btn {
-    cursor: pointer;
   }
   &__errorLogin {
     position: absolute;
