--- a/client/src/components/UI/Field/Field.module.css
+++ b/client/src/components/UI/Field/Field.module.css
@@ -11,7 +11,7 @@
   margin-bottom: 20px;
 }
 .search {
-  background-color: #181818;
+  background-color: var(--primary-color-dark);
   width: 100%;
   height: 50px;
   color: #fff;
